Cleans up spacing issues on mobile

--- a/src/_includes/css/site.css
+++ b/src/_includes/css/site.css
@@ -13,7 +13,7 @@
   --color-background: #fafafa;
 
   --font-size-base: 1em;
-  --spacing-unit: .25em;
+  --spacing-unit: .5em;
 }
 
 html {
@@ -30,7 +30,7 @@ html {
   }
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 52em) {
   html {
     font-size: 130%;
   }
@@ -77,7 +77,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 700;
+  font-weight: 400;
   line-height: 1.1;
 }
 
@@ -132,6 +132,75 @@ code {
 }
 
 /**
+ * Spacing utils
+ */
+
+.mcg-pt-sm {
+  padding-top: calc(var(--spacing-unit) * 2) !important;
+}
+
+.mcg-pt-md {
+  padding-top: calc(var(--spacing-unit) * 4) !important;
+}
+
+.mcg-pt-lg {
+  padding-top: calc(var(--spacing-unit) * 6) !important;
+}
+
+.mcg-pt-xl {
+  margin-top: calc(var(--spacing-unit) * 8) !important;
+}
+
+.mcg-mt-sm {
+  margin-top: calc(var(--spacing-unit) * 2) !important;
+}
+
+.mcg-mt-md {
+  margin-top: calc(var(--spacing-unit) * 4) !important;
+}
+
+.mcg-mt-lg {
+  margin-top: calc(var(--spacing-unit) * 6) !important;
+}
+
+.mcg-mt-xl {
+  margin-top: calc(var(--spacing-unit) * 8) !important;
+}
+
+
+.mcg-pb-sm {
+  padding-bottom: calc(var(--spacing-unit) * 2) !important;
+}
+
+.mcg-pb-md {
+  padding-bottom: calc(var(--spacing-unit) * 4) !important;
+}
+
+.mcg-pb-lg {
+  padding-bottom: calc(var(--spacing-unit) * 6) !important;
+}
+
+.mcg-pb-xl {
+  margin-bottom: calc(var(--spacing-unit) * 8) !important;
+}
+
+.mcg-mb-sm {
+  margin-bottom: calc(var(--spacing-unit) * 2) !important;
+}
+
+.mcg-mb-md {
+  margin-bottom: calc(var(--spacing-unit) * 4) !important;
+}
+
+.mcg-mb-lg {
+  margin-bottom: calc(var(--spacing-unit) * 6) !important;
+}
+
+.mcg-mb-xl {
+  margin-bottom: calc(var(--spacing-unit) * 8) !important;
+}
+
+/**
  * Typography
  */
 
@@ -153,6 +222,10 @@ code {
   margin-top: 0;
 }
 
+.mcg-wrapper--wider {
+  max-width: 48em;
+}
+
 .mcg-wrapper--full {
   max-width: 100%;
 }
@@ -167,7 +240,7 @@ code {
 }
 
 .mcg-grid__item {
-  margin-bottom: 1.5rem;
+  margin-bottom: calc(var(--spacing-unit) * 4);
 }
 
 @media screen and (min-width: 740px) {
@@ -216,7 +289,7 @@ code {
   }
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 52em) {
   .mcg-intro {
     postion: absolute;
     top: 0;
@@ -244,8 +317,13 @@ code {
  */
 
 .mcg-header {
-  display: flex;
   padding: calc(var(--spacing-unit) * 4);
+}
+
+@media screen and (min-width: 36em) {
+  .mcg-header {
+    display: flex;
+  }
 }
 
 .mcg-header a {
@@ -314,6 +392,7 @@ code {
 
 .mcg-feed-list a {
   text-decoration: none;
+  display: block;
 }
 
 .mcg-feed-list time {
@@ -328,8 +407,10 @@ code {
   border-bottom: 1px solid var(--color-ruler);
 }
 
-.mcg-feed-list li article {
-  display: flex;
+@media screen and (min-width: 36em) {
+  .mcg-feed-list li article {
+    display: flex;
+  }
 }
 
 /**
